--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1 class="hero__title">Eswar Vinay Kumar Avala</h1>
         <p class="hero__subtitle">Cloud &amp; DevOps Engineer • OpenShift Administrator • AWS • Docker • Kubernetes • Terraform • Jenkins • Tomcat &amp; Apache • RHEL • Prometheus • Grafana • Kibana</p>
         <div class="hero__cta">
-          <a class="btn btn--primary" href="mailto:avalaeswar789@gmail.com"><img src="assets/gmail_icon_final.png" alt="Gmail" style="width:18px;height:18px;"> Email</a>
+          <a class="btn btn--primary" href="mailto:avalaeswar789@gmail.com"><img src="gmail_icon_final.png" alt="Gmail" style="width:18px;height:18px;"> Email</a>
           
           <a class="btn btn--link" href="https://www.linkedin.com/in/eswar-vinay-kumar-avala/" target="_blank" rel="noopener">in LinkedIn</a>
         </div>
@@ -28,7 +28,7 @@
       </div>
       <div class="hero__card">
         <div class="badge">🏆 Spot Awards — Super Crew (LTIMindtree)</div>
-        <div class="hero__avatar" aria-label="Profile avatar"><img src="assets/logo_circle.png" alt="Logo" style="width:100%;height:100%;border-radius:50%;object-fit:cover;background:white;padding:10%;"></div>
+        <div class="hero__avatar" aria-label="Profile avatar"><img src="logo_circle.png" alt="Logo" style="width:100%;height:100%;border-radius:50%;object-fit:cover;background:white;padding:10%;"></div>
         <div class="tagline">“Individually, we are one drop. Together, we are an ocean.”</div>
       </div>
     </div>
