--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <ul class="quick-stats">
           <li>🎯 Seeking: DevOps / Cloud / SRE roles</li>
-          <li>📍 Bengaluru, India | Hyderabad, India</li>
+          <li>📍 Hyderabad, India | Bengaluru, India </li>
         </ul>
       </div>
       <div class="hero__card">
@@ -74,7 +74,7 @@
           </div>
           <ul class="card__list">
             <li>Orchestrated Cloud and Infrastructure support for CITI Bank, ensuring 99.9% uptime for mission-critical banking applications.</li>
-            <li>Managed 50+ containerized applications using RedHat OpenShift Console, optimizing deployment efficiency.</li>
+            <li>Built and managed RedHat OpenShift clusters, overseeing 50+ enterprise-grade containerized applications and optimizing deployments.</li>
             <li>Streamlined Tomcat and Apache troubleshooting, cutting issue resolution time by 30% through proactive log analysis.</li>
             <li>Implemented CI/CD automation using Docker, Kubernetes, Jenkins, and Git, increased deployment frequency by 40%.</li>
             <li>Delivering 24/7 production support for high-priority banking applications, achieving 99.5% SLA adherence.</li>
@@ -88,7 +88,7 @@
             <div class="card__meta">Wipro • Mar 2023 – Aug 2023 • Uttar Pradesh</div>
           </div>
           <ul class="card__list">
-            <li>Built a strong foundation in Linux Administration, Tomcat, Apache, Git, Docker, and Kubernetes with hands-on focus on system administration and container orchestration.</li>
+            <li>Administered Linux servers, configured Apache/Tomcat, managed code with Git, and deployed containerized applications on Kubernetes, supporting environment setup, deployments, and troubleshooting tasks.</li>
           </ul>
         </article>
       </div>
@@ -100,13 +100,13 @@
       <h2 class="section__title">Projects</h2>
       <div class="proj-grid">
         <article class="proj">
-          <div class="proj__badge">CI/CD • AWS • Kubernetes</div>
-          <h3 class="proj__title">Enterprise-Grade CI/CD Pipeline</h3>
+          <div class="proj__badge">• OpenShift • CI/CD</div>
+          <h3 class="proj__title">Enterprise-Grade End-to-End CI/CD Deployment</h3>
           <ul class="proj__bullets">
-            <li>Automated build, ECR image push, and Helm-based zero-downtime deployments on EKS/OpenShift.</li>
+            <li>Automated deployments across Dev, UAT, and Prod using Harness CI/CD, managing workload objects, Service Accounts, RoleBindings, ResourceQuotas, and PV/PVC.</li>
             <li>Reduced release time and improved reliability.</li>
           </ul>
-          <div class="proj__tech">Jenkins • GitHub Actions • Docker • Kubernetes • Helm • AWS EKS • OpenShift</div>
+          <div class="proj__tech">OpenShift • Jenkins • GitHub Actions • Docker • Kubernetes • Helm • Harness</div>
         </article>
 
         <article class="proj">
@@ -120,12 +120,12 @@
         </article>
 
         <article class="proj">
-          <div class="proj__badge">OpenShift • Middleware</div>
-          <h3 class="proj__title">OpenShift Cluster & Middleware Management</h3>
+          <div class="proj__badge">OpenShift • Monitoring</div>
+          <h3 class="proj__title">Production Observability & Monitoring with Grafana & Kibana</h3>
           <ul class="proj__bullets">
-            <li>Administered 50+ production workloads with Tomcat/Apache, RBAC, PVCs, monitoring integration.</li>
+            <li>Set up Grafana dashboards and alerting for real-time visibility into application and cluster health. Used Kibana for log analysis, enabling faster root-cause detection and improved system uptime.</li>
           </ul>
-          <div class="proj__tech">OpenShift • Tomcat • Apache • Monitoring</div>
+          <div class="proj__tech">OpenShift • Monitoring</div>
         </article>
       </div>
     </section>
