--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <span class="chip">GitHub Actions</span>
         <span class="chip">Git</span>
         <span class="chip">Helm</span>
+        <span class="chip">Harness</span>
         <span class="chip">Terraform</span>
         <span class="chip">CI/CD Pipelines</span>
         <span class="chip">Apache HTTP Server</span>
@@ -85,7 +86,7 @@
         <article class="card">
           <div class="card__head">
             <div class="card__title">Project Engineer</div>
-            <div class="card__meta">Wipro • Mar 2023 – Aug 2023 • Uttar Pradesh</div>
+            <div class="card__meta">Wipro • Mar 2023 – Aug 2023 • Greater Noida</div>
           </div>
           <ul class="card__list">
             <li>Administered Linux servers, configured Apache/Tomcat, managed code with Git, and deployed containerized applications on Kubernetes, supporting environment setup, deployments, and troubleshooting tasks.</li>
@@ -100,7 +101,7 @@
       <h2 class="section__title">Projects</h2>
       <div class="proj-grid">
         <article class="proj">
-          <div class="proj__badge">• OpenShift • CI/CD</div>
+          <div class="proj__badge">OpenShift • CI/CD</div>
           <h3 class="proj__title">Enterprise-Grade End-to-End CI/CD Deployment</h3>
           <ul class="proj__bullets">
             <li>Automated deployments across Dev, UAT, and Prod using Harness CI/CD, managing workload objects, Service Accounts, RoleBindings, ResourceQuotas, and PV/PVC.</li>
@@ -125,7 +126,7 @@
           <ul class="proj__bullets">
             <li>Set up Grafana dashboards and alerting for real-time visibility into application and cluster health. Used Kibana for log analysis, enabling faster root-cause detection and improved system uptime.</li>
           </ul>
-          <div class="proj__tech">OpenShift • Monitoring</div>
+          <div class="proj__tech">OpenShift • Grafana • Kibana • Prometheus</div>
         </article>
       </div>
     </section>
