--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
       <h2 class="section__title">Certifications</h2>
       <ul class="achievements">
         <li>AWS Certified Cloud Practitioner (Essentials) – Amazon Web Services (2024)</li>
+        <li>Certified Kubernetes Administrator (CKA) – The Linux Foundation</li>
       </ul>
     </section>
 
