--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <section class="section container">
       <h2 class="section__title">Certifications</h2>
       <ul class="achievements">
-        <li>AWS Certified Cloud Practitioner (Essentials) – Amazon Web Services (2024)</li>
+        <li>AWS Certified Cloud Practitioner (Essentials) – Amazon Web Services</li>
         <li>Certified Kubernetes Administrator (CKA) – The Linux Foundation</li>
       </ul>
     </section>
